--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -1232,14 +1232,14 @@ section.photo-up-sec-2 {
     padding-left: 10px;
 }
 
-.personal-info-form form input {
+.personal-info-form form input,.personal-info-form form select {
     border: 2px solid #05eab5;
     border-radius: 50px;
     padding: 8px 20px;
     width: 30%;
     font-size: 15px;
 }
-.personal-info-form form input::placeholder{
+.personal-info-form form input::placeholder,.personal-info-form form select::placeholder{
     font-weight:700;
     color:black;
 }
@@ -1817,5 +1817,34 @@ i.circleI {
 }
 .head-btns {
     width: auto;
+}
+/*22-11-22*/
+.rowFormTn {
+    display: flex;
+    flex-flow: wrap;
+    flex-direction: row;
+}
+.col-2Tn {
+    flex: 0 0 calc(50% - 15px);
+}
+.personal-info-form form .col-2Tn input,.personal-info-form form .col-2Tn select {
+    width: 100%;
+    flex: 0 0 100%;
+    display: block;
+    max-width: unset;
+}
+.personal-info-form form div.col-2Tn {
+    margin: 0;
+    margin-bottom: 24px;
+}
+.personal-info-form form div.col-2Tn:nth-child(odd) {
+    margin-right: 15px;
+}
+.personal-info-form form div.col-2Tn:nth-child(even) {
+    margin-left: 15px;
+}
+form.rowFormTn  .personal-info-form-btn.photo-up-sec-2-box-btn {
+    margin-left: auto;
+    margin-top: 10px;
 }
 
