--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -1224,7 +1224,7 @@ section.photo-up-sec-2 {
     margin-bottom:0px;
 }
 
-.personal-info-form form h4 {
+.personal-info-form .form h4 {
     margin-bottom: 0px;
     font-size: 17px;
     font-weight: 700;
@@ -1232,18 +1232,18 @@ section.photo-up-sec-2 {
     padding-left: 10px;
 }
 
-.personal-info-form form input,.personal-info-form form select {
+.personal-info-form .form input,.personal-info-form .form select {
     border: 2px solid #05eab5;
     border-radius: 50px;
     padding: 8px 20px;
     width: 30%;
     font-size: 15px;
 }
-.personal-info-form form input::placeholder,.personal-info-form form select::placeholder{
+.personal-info-form .form input::placeholder,.personal-info-form .form select::placeholder{
     font-weight:700;
     color:black;
 }
-.personal-info-form form div:nth-child(2){
+.personal-info-form .form div:nth-child(2){
     margin: 23px 0px;
 }
 .personal-info-form-btn{
@@ -1827,20 +1827,20 @@ i.circleI {
 .col-2Tn {
     flex: 0 0 calc(50% - 15px);
 }
-.personal-info-form form .col-2Tn input,.personal-info-form form .col-2Tn select {
+.personal-info-form .form .col-2Tn input,.personal-info-form .form .col-2Tn select {
     width: 100%;
     flex: 0 0 100%;
     display: block;
     max-width: unset;
 }
-.personal-info-form form div.col-2Tn {
+.personal-info-form .form div.col-2Tn {
     margin: 0;
     margin-bottom: 24px;
 }
-.personal-info-form form div.col-2Tn:nth-child(odd) {
+.personal-info-form .form div.col-2Tn:nth-child(odd) {
     margin-right: 15px;
 }
-.personal-info-form form div.col-2Tn:nth-child(even) {
+.personal-info-form .form div.col-2Tn:nth-child(even) {
     margin-left: 15px;
 }
 form.rowFormTn  .personal-info-form-btn.photo-up-sec-2-box-btn {
